8301121: rich text area control